# wallet_api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: bbf583df09d5_initial_migration.py
app/: database.py  main.py  models.py  schemas.py
app/api/v1/: router.py
app/api/v1/endpoints/: audit.py  operations.py  transactions.py  wallets.py
app/core/: config.py  logger.py
tests/: conftest.py
tests/api/v1/endpoints/operations/: test_operations.py
tests/api/v1/endpoints/wallets/: test_create_wallet.py  test_get_wallet.py  test_update_wallet_status.py
